--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafgraph/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
@@ -36,7 +36,7 @@
           }
         }
       })(window.location);
-    </script>
+    </script> -->
     <!-- End Single Page Apps for GitHub Pages -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
