--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     <!-- End Single Page Apps for GitHub Pages -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Test</title>
+    <title>My Music App</title>
   </head>
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
