--- a/public/index.html
+++ b/public/index.html
@@ -77,5 +77,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="loader-bg"></div>
+    <div class="loader-ani"></div>
+    </div>
   </body>
 </html>
